--- a/style.css
+++ b/style.css
@@ -23,3 +23,12 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
 }
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.4rem 7%;
+  background-color: var(--bg-color);
+  position: fixed;
+}
