refactor index.html and style.css to enhance navbar structure and improve layout

--- a/style.css
+++ b/style.css
@@ -25,16 +25,12 @@ body {
 }
 
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1.4rem 7%;
-  background-color: var(--bg-color);
-  position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+    background-color: var(--bg-color);
+    position: fixed;
+    z-index: 9999;
 }
 
-.navbar a {
-  display: inline-block;
-  font-size: 1.3rem;
-  margin: 0 1rem;
-}
