--- a/style.css
+++ b/style.css
@@ -109,18 +109,18 @@ body {
 }
 
 .typing {
-  font-size: 2.5rem; /* Ukuran font lebih besar */
+  font-size: 2.5rem; 
   font-weight: 700;
   color: var(--primary-color);
   display: inline-block;
 }
 
 .typewriter {
-  border-right: 3px solid var(--primary-color); /* Kursor lebih tebal */
+  border-right: 3px solid var(--primary-color); 
   display: inline-block;
   white-space: nowrap;
   overflow: hidden;
-  animation: blink 0.7s step-end infinite, color-change 4s linear infinite; /* Animasi blinking + perubahan warna */
+  animation: blink 0.7s step-end infinite, color-change 4s linear infinite; 
 }
 
 @keyframes blink {
