--- a/style.css
+++ b/style.css
@@ -616,7 +616,7 @@ footer {
 
   .content p {
     font-size: 1rem;
-    margin: auto 1rem auto 2rem;
+    margin: 1rem auto 2rem auto;
   }
 
   .btn {
