--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ section ul li {
   flex: 2;
 }
 
-.section-title {
+.section-title-about{
   font-size: 2.5rem;
   color: var(--primary-color);
   margin-bottom: 1.5rem;
