--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   width: 100%;
   top: 0;
   left: 0;
-  background-color: var(--secondary-color);
+  background-color: var(--bg-color);
   z-index: 1000;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
